Upcoming:
- Another optimization on worldgen
- Fixed a problem with connecting walls and glass slabs that got broken in the previous release
- Fixed a bug in the explosion correction code

1.18-5.1.2:
- Much more stable way to generate the Lost City chunks. No more worldgen warnings and tallbuildings profile works again
- MUCH faster way to detect (and delete) floating building parts after being damaged by explosions. It is however slightly less accurate

1.18-5.1.1:
- Fixed a problem with the seed of the custom dimension

1.18-5.1.0:
- Port to 1.18.2

1.18-5.0.4:
- API for registering Lost City dimensions
- Improved placement of wallblocks

1.18-5.0.3:
- Fixed the Lost City dimension. Also added a safety check when trying to teleport to such a dimension (with the bed)

1.18-5.0.2:
- Properly fixed the problem on single player where exiting the world would not reset everything and keep settings for the next created world
- Fixed a problem with the bedrock layer generating at 0 under city buildings

1.18-5.0.1:
- Better at preventing cities where there are villages

1.18-5.0.0:
- First port of Lost Cities to 1.18

1.16-4.0.10-beta:
- Fixed the problem where beds would explode right after teleporting to and from the Lost City dimension

1.16-4.0.9-beta:
- Added back the specialBedBlock config (in lostcities-server.toml) so that you can change the diamond block under the bed
- It is now possible to specify blocks using the standard BlockState format in the palette (for example: minecraft:quartz_slab[type=bottom]) giving many more options for custom assets

1.16-4.0.8-beta:
- Fixed a problem with creation of multiple worlds where the settings of the first world would persist for future worlds. This also fixes the saving of the selected profile in serverconfig/lostcities-server.toml

1.16-4.0.7-beta:
- Fixed loot and spawner generation so that it happens more consistently now

1.16-4.0.6-alpha:
- The ILostCities API is back

1.16-4.0.5-alpha: